# opengm_pqc

./: .gitignore  Cargo.toml  README.md  build.rs  cbindgen.toml  go.mod  makefile  t.sh
doc/: mldsa_tpc.md
goapi/: import_darwin_arm64.go  import_linux_amd64.go  import_linux_arm64.go  import_linux_loong64.go  import_windows_amd64.go
goapi/mldsa/: mldsa44.go  mldsa65.go  mldsa87.go  mldsa_test.go
goapi/mlkem/: import_darwin_arm64.go  import_linux_amd64.go  import_linux_arm64.go  mlkem.go  mlkem1024.go  mlkem1024_test.go  mlkem512.go  mlkem512_test.go  mlkem768.go  mlkem768_test.go  mlkem_test.go
libs/: bindings.h  opengm_pqc.h  repack.sh
src/: lib.rs  modules.rs  tick.rs
src/common/: mod.rs  prime.rs  primitive.rs  u64_arith.rs  uint192.rs
src/mldsa/: auxiliary.rs  errors.rs  hash.rs  internal.rs  mldsa44.rs  mldsa65.rs  mldsa87.rs  mod.rs  reduce.rs  rq.rs  util.rs
src/mldsa/auxiliary/: bit_hint.rs  bit_pack.rs  encode.rs  expand.rs  sample.rs  simple_bit_pack.rs
src/mldsa_tpc/: errors.rs  internal.rs  mldsa65_tpc.rs  mod.rs
src/mlkem/: compress_decode.rs  errors.rs  hash.rs  internal.rs  mlkem1024.rs  mlkem512.rs  mlkem768.rs  mod.rs  ntt.rs  pke.rs  reduce.rs  rq.rs  sample.rs  util.rs  zq.rs
src/mlkem/kat/: mod.rs
src/mlkem/mlkem512/: mod.rs  pke.rs
src/mlkem/reduce/: barrett_reduce.rs  mont19_reduce.rs  mont20_reduce.rs  mont_reduce.rs
src/sha3/: keccakf.rs  mod.rs  shake.rs  sponge.rs
